--- a/10.html
+++ b/10.html
@@ -33,7 +33,7 @@
         <a href="#section12" class="num12"></a>
     </div>
 
-    <div class="title"><span style="color: #FFCF03;">그림책 창작</span> 프로젝트</div>
+    <div class="title">작가의 창작 의도와 <span style="color: #FFCF03;">비하인드 스토리</span></div>
 
     <div class="group" id="section1">
         <section style="background-image: url(10/question1.png);">
