--- a/11.html
+++ b/11.html
@@ -29,7 +29,7 @@
         <a href="#section10" class="num10"></a>
     </div>
 
-    <div class="title">작품과 독자 간의 <span style="color: #FFCF03;">연결</span></div>
+    <div class="title">작품 전시와 <span style="color: #FFCF03;">홍보</span></div>
 
     <div class="group" id="section1">
         <section style="background-image: url(11/question1.png);">
