--- a/6.html
+++ b/6.html
@@ -29,7 +29,7 @@
         <a href="#section10" class="num10"></a>
     </div>
 
-    <div class="title">작가의 <span style="color: #FFCF03;">창작 의도</span> 파악하기</div>
+    <div class="title">작가의 <span style="color: #FFCF03;">창작 과정</span>과 아이디어</div>
 
     <div class="group" id="section1">
         <section style="background-image: url(6/question1.png);">
