--- a/7.html
+++ b/7.html
@@ -29,7 +29,7 @@
         <a href="#section10" class="num10"></a>
     </div>
 
-    <div class="title">작품 완성과 <span style="color: #FFCF03;">비하인드 스토리</span></div>
+    <div class="title"><span style="color: #FFCF03;">아이디어 스케치</span>와 기획</div>
 
     <div class="group" id="section1">
         <section style="background-image: url(7/question1.png);">
