--- a/8.html
+++ b/8.html
@@ -27,7 +27,7 @@
         <a href="#section8" class="num8"></a>
     </div>
 
-    <div class="title">작품의 <span style="color: #FFCF03;">브랜딩과 홍보</span></div>
+    <div class="title">작품 제작과 <span style="color: #FFCF03;">공정</span></div>
 
     <div class="group" id="section1">
         <section style="background-image: url(8/question1.png);">
