--- a/9.html
+++ b/9.html
@@ -29,7 +29,7 @@
         <a href="#section10" class="num10"></a>
     </div>
 
-    <div class="title"><span style="color: #FFCF03;">작품 전시</span>와 발표</div>
+    <div class="title">작가의 작품 해부하기: <span style="color: #FFCF03;">기승전결</span></div>
 
     <div class="group" id="section1">
         <section style="background-image: url(9/question1.png);">
