--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <h1 class="myName">Art Essay</h1>
     <p class="myAbout">Art Essay는 하브루타 방식을 통해 작가들의 창작 능력과 성취감을 높이는 클래스입니다.</p>
 
-    <a href="6.html" class="al">6. 작가의 창작 의도 파악하기</a>
-    <a href="7.html" class="al">7. 작품 완성과 비하인드 스토리</a>
-    <a href="8.html" class="al">8. 작품의 브랜딩과 홍보</a>
-    <a href="9.html" class="al">9. 작품 전시와 발표</a>
-    <a href="10.html" class="al">10. 그림책 창작 프로젝트</a>
-    <a href="11.html" class="al">11. 작품과 독자 간의 연결</a>
+    <a href="6.html" class="al">6. 작가의 창작 과정과 아이디어</a>
+    <a href="7.html" class="al">7. 아이디어 스케치와 기획</a>
+    <a href="8.html" class="al">8. 작품 제작과 공정</a>
+    <a href="9.html" class="al">9. 작가의 작품 해부하기: 기승전결</a>
+    <a href="10.html" class="al">10. 작가의 창작 의도와 비하인드 스토리</a>
+    <a href="11.html" class="al">11. 작품 전시와 홍보</a>
     <a href="12.html" class="al">12. 작가의 성장과 발전, 예술적 비전과 목표</a>
 </body>
 
