--- a/10.html
+++ b/10.html
@@ -31,6 +31,8 @@
         <a href="#section10" class="num10"></a>
         <a href="#section11" class="num11"></a>
         <a href="#section12" class="num12"></a>
+        <a href="#section13" class="num13"></a>
+        <a href="#section14" class="num14"></a>
     </div>
 
     <div class="title">작가의 창작 의도와 <span style="color: #FFCF03;">비하인드 스토리</span></div>
@@ -104,6 +106,18 @@
     <div class="group" id="section12">
         <section style="background-image: url(10/question12.png);">
             <div class="num12 bottom flipX"></div>
+        </section>
+    </div>
+
+    <div class="group" id="section13">
+        <section style="background-image: url(10/question13.png);">
+            <div class="num13 left flipY"></div>
+        </section>
+    </div>
+
+    <div class="group" id="section14">
+        <section style="background-image: url(10/question14.png);">
+            <div class="num14 top flipZ"></div>
         </section>
     </div>
 
