--- a/11.html
+++ b/11.html
@@ -22,11 +22,14 @@
         <a href="#section3" class="num3"></a>
         <a href="#section4" class="num4"></a>
         <a href="#section5" class="num5"></a>
+    </div>
+    <div class="navbar">
         <a href="#section6" class="num6"></a>
         <a href="#section7" class="num7"></a>
         <a href="#section8" class="num8"></a>
         <a href="#section9" class="num9"></a>
         <a href="#section10" class="num10"></a>
+        <a href="#section11" class="num11"></a>
     </div>
 
     <div class="title">작품 전시와 <span style="color: #FFCF03;">홍보</span></div>
@@ -91,6 +94,12 @@
         </section>
     </div>
 
+    <div class="group" id="section11">
+        <section style="background-image: url(11/question11.png);">
+            <div class="num11 top flipX"></div>
+        </section>
+    </div>
+    
     <script>
         // Smooth scrolling when clicking on the navbar links
         document.querySelectorAll('.navbar a').forEach(anchor => {
