--- a/11.html
+++ b/11.html
@@ -16,7 +16,7 @@
 
 <body style="background-color: #0846B0;">
 
-    <div class="navbar">
+    <div class="navbar" style="margin-right: 70px;">
         <a href="#section1" class="num1"></a>
         <a href="#section2" class="num2"></a>
         <a href="#section3" class="num3"></a>
